--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/service-worker.js"
             ],
             "styles": [
               "src/styles.css"
